# mr-manager

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
include/mr-manager/: manager.hpp
test_package/: CMakeLists.txt  conanfile.py  test.cpp
